[project]
name = "weather-mcp-python"
version = "0.1.0"
description = "Weather MCP server"
readme = "README.md"
requires-python = ">=3.11.7"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]<=1.10.3",
    "fastmcp",
    "ibm-watsonx-orchestrate==1.8.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
test = [
    "aiohttp>=3.8.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]